--- a/ajay/task1/index.html
+++ b/ajay/task1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        ajay task yaha push karega 
+        divyanshu task yaha push karega 
     </h1>
 </body>
 </html>
